# DAG-HL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bench.cpp  benchmark.sh  build.sh  downloadSnap.sh  main.cpp  pll.cpp
.github/workflows/: ci.yml
benchmark/: benchmark_bit_vector.csv  benchmark_compress_vector.csv  benchmark_edge_tree.csv  benchmark_results.csv  bit_vector_bench.cpp  call_benchmark.sh  compress_vector_bench.cpp  edgetree_bench.cpp  hldag_bench.cpp  label_vs_compressed_label.cpp  parr_bfs_bench.cpp  plot.py  plot_bit_vector.py  plot_compressed_vector.py  queue_bench.cpp
benchmarks/: hub_labels_bench.cpp  priority_queue_bench.cpp
datastructures/: bfs.h  bfs_tools.h  bit_vector.h  compressed_vector.h  dag_wpll.h  dijkstra.h  drawer.h  forest.h  golomb_rice.h  graph.h  hldag.h  hub_labels.h  parallel_hldag.h  priority_queue.h  pruned_landmark_labeling.h  pruned_landmark_labeling_frontierBFS.h  rxl.h  rxldag.h  sample_trees.h  sample_trees_simd.h  simd.h  spinlock.h  status_log.h  timer.h  timestamped_vector.h  topological_seperator.h  topological_sort.h  types.h  utils.h  weighted_pll.h  wpll.h
tests/: bfs_tools_test.cpp  bit_vector_test.cpp  compressed_vector_test.cpp  drawer_test.cpp  forest_test.cpp  golomb_rice_test.cpp  graph_test.cpp  hub_labels_tests.cpp  priority_queue_test.cpp  pruned_landmark_labeling_test.cpp  small_sample_dag.dimacs  utils_test.cpp
